--- a/.github/nglview-gha.yml
+++ b/.github/nglview-gha.yml
@@ -6,34 +6,29 @@ channels:
 dependencies:
   - python>=3.6
   - pip
-  - jupyter-packaging
-  - qcelemental
-  - traitlets
-  - ipywidgets
-  - comm  # see https://github.com/jupyter-widgets/ipywidgets/issues/3729
-  - mock
-  - coverage
-  - nose
-  - pytest
-  - pytest-cov
-  - coveralls
-  - pandas
-  - ase
-  - biopython
-  - pymatgen
-  - simpletraj
-  - matplotlib
-  - moviepy
-  - imageio
-  - pillow
-  - numpy
-  - pandas
-  - ase
-  - biopython
-  - pymatgen
-  - simpletraj
-  - rdkit
-  - mdanalysis
-  - mdtraj
-  - parmed
-  - ambertools
+  - jupyter-packaging>=0.12.3
+  - qcelemental>=0.25.1
+  - traitlets>=5.9.0
+  - ipywidgets>=8.0.5
+  - comm>=0.1.3  # see https://github.com/jupyter-widgets/ipywidgets/issues/3729
+  - mock>=5.0.1
+  - coverage>=6.5.0
+  - nose>=1.3.7
+  - pytest>=7.2.0
+  - pytest-cov>=4.0.0
+  - coveralls>=3.3.1
+  - pandas>=1.3.5
+  - ase>=3.22.1
+  - biopython>=1.79
+  - pymatgen>=2022.1.7
+  - simpletraj>=0.5
+  - matplotlib>=3.5.3
+  - moviepy>=1.0.3
+  - imageio>=2.26.0
+  - pillow>=9.2.0
+  - numpy>=1.21.6
+  - rdkit>=2022.09.1
+  - mdanalysis>=2.1.0
+  - mdtraj>=1.9.7
+  - parmed>=3.4.3
+  - ambertools>=22.0
