--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
         channels: conda-forge
         channel-priority: true
         python-version: ${{ matrix.python-version }}
-        use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
+        # use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
 
     - name: hoge
       run: |
